--- a/pages/index.html
+++ b/pages/index.html
@@ -11,6 +11,9 @@
 
     <h1 class="index-title">我是首頁這只是測試版  會再刪掉</h1>
     <h1 class="index-title">我是首頁這只是測試版  會再刪掉</h1>
+    <h1 class="index-title">我是首頁這只是測試版  會再刪掉</h1>
+    <h1 class="index-title">我是首頁這只是測試版  會再刪掉</h1>
+
 
     <div class="card" style="width: 18rem">
       <img src="../assets/images/cat.jpg" class="card-img-top" alt="cat" />
