--- a/pages/index.html
+++ b/pages/index.html
@@ -13,7 +13,7 @@
     <h1 class="index-title">我是首頁這只是測試版  會再刪掉</h1>
     <h2>123</h2>
     <h2>456</h2>
-    <p>new</p>
+    <p>new test</p>
     
 
 
