--- a/pages/index.html
+++ b/pages/index.html
@@ -5,38 +5,45 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>創夢工坊</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+TC:wght@200..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Bootstrap 5 CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaTioPzWJ0h8cCw2WLLQpG2L1z4lg3FL2jvoLIweDvffp8EGFKzGpqp1E0i" crossorigin="anonymous">
+    <!-- Bootstrap 5 JS + Popper.js -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeo5v4Mw5dldwbg6GPHa1w6ZT6tztFIdSTwBKxULy5hG9ANk" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css?family=Material+Icons%7CMaterial+Icons+Outlined%7CMaterial+Icons+Two+Tone%7CMaterial+Icons+Round%7CMaterial+Icons+Sharp" rel="stylesheet">
   </head>
   <body>
     <%- include('./layout/header'); -%>
-
     <!-- banner -->
-        <div class="front-page-banner d-flex flex-column justify-content-center align-items-center">
-          <h1 class="fw-bold">投資未來，創造無限可能</h1>
-          <div>
-            <div class="w-100 d-flex align-items-center">
-              <div class="banner-input input-group w-100 my-3 me-3">
-                <a href="#" class="input-group-text pe-3">
-                  <i class="bi bi-search"></i>
-                </a>
-                <input type="text" class="form-control py-2 ps-0" id="search">
-              </div>
-              <div class="navbar-expand-lg me-3">
-                <div class="dropdown">
-                  <button class="btn btn-light dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
-                      請選擇一個選項
-                  </button>
-                  <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                    <li><button class="dropdown-item" type="button">Action</button></li>
-                    <li><button class="dropdown-item" type="button">Another action</button></li>
-                    <li><button class="dropdown-item" type="button">Something else here</button></li>
-                  </ul>
+        <div class="front-page-banner d-flex justify-content-center align-items-center">
+          <div class="banner-content fuck">
+            <h1 class="banner-title fw-bold text-center">
+              投資未來<br>創造<span>無限</span>可能!
+            </h1>
+              <div class="d-flex align-items-center">
+                <input type="text" class="banner-input form-control me-3 flex-grow-1" placeholder="搜尋...">
+  
+                <div class="search-dropdown navbar-expand-lg me-3">
+                  <div class="dropdown">
+                    <button class="btn dropdown-btn dropdown-toggle n-icon d-flex justify-content-between align-items-center" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
+                        找創業項目<span class="material-icons-outlined text-gray-100 p-0">
+                          keyboard_arrow_down
+                        </span>
+                    </button>
+                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                      <li class="dropdown-hover"><button class="dropdown-item text-gray-100" type="button">找創業項目</button></li>
+                      <li class="dropdown-hover"><button class="dropdown-item text-gray-100" type="button">找投資</button></li>
+                    </ul>
+                  </div>
                 </div>
-              </div>
-              <button type="submit" class="search-btn btn btn-primary">搜尋</button>
-            </div>   
-          </div>      
+  
+                <button type="submit" class="search-btn btn btn-primary-600 fw-bold">搜尋</button>
+              </div>  
+          </div>
         </div>
 
 
@@ -319,7 +326,8 @@
 
       
     <%- include('./layout/footer'); -%>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Bootstrap 5 JS + Popper.js 放在這裡 -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeo5v4Mw5dldwbg6GPHa1w6ZT6tztFIdSTwBKxULy5hG9ANk" crossorigin="anonymous"></script>
     <script type="module" src="../main.js"></script>
   </body>
 </html>
