--- a/pages/index.html
+++ b/pages/index.html
@@ -15,6 +15,8 @@
     <!-- Bootstrap 5 JS + Popper.js -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeo5v4Mw5dldwbg6GPHa1w6ZT6tztFIdSTwBKxULy5hG9ANk" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Material+Icons%7CMaterial+Icons+Outlined%7CMaterial+Icons+Two+Tone%7CMaterial+Icons+Round%7CMaterial+Icons+Sharp" rel="stylesheet">
+    <!-- Link Swiper's CSS -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
   </head>
   <body>
     <%- include('./layout/header'); -%>
@@ -48,107 +50,132 @@
 
 
       <!-- 獨家特色 -->
-       <div class="container py-5">
-        <h2 class="text-center">獨家特色</h2>
-        <div class="row">
-          <div class="col-4">
-            <div class="text-center">
-              <i class="bi bi-star"></i>
-              <h3 class="mb-3">精準搜尋</h3>
-              <p>利用我們的搜尋系統,你可以輕鬆篩選並找到符合您創業需求的合適夥伴和機會。高效、快捷,讓您的創業之路更加順利。</p>
-            </div> 
+       <section class="bg-gray-1000">
+        <div class="features container py-lg-15">
+          <h2 class="fw-bold text-center text-primary-600 mb-lg-8">獨家特色</h2>
+          <div class="row">
+            <div class="col-4">
+              <div class="text-center">
+                <div class="feature-icon mb-lg-3">
+                  <img src="/assets/images/icons/search.png" alt="icon">
+                </div>
+                <h4 class="text-gray-100 mb-3">精準搜尋</h4>
+                <p class="feature-content">利用我們的搜尋系統,你可以輕鬆篩選並找到符合您創業需求的合適夥伴和機會。高效、快捷,讓您的創業之路更加順利。</p>
+              </div> 
+            </div>
+            <div class="col-4">
+              <div class="text-center">
+                <div class="feature-icon mb-lg-3">
+                  <img src="/assets/images/icons/start.png" alt="icon">
+                </div>
+                <h4 class="text-gray-100 mb-3">真實評價</h4>
+                <p class="feature-content">合作更安心!我們的真實評價系統讓你在選擇創業夥伴時更加有依據。每一位用戶都可以留下真實評價,讓你了解對方的合作表現和口碑,確保每一次合作都更有保障。</p>
+              </div>        
+            </div>
+            <div class="col-4">
+              <div class="text-center">
+                <div class="feature-icon mb-lg-3">
+                  <img src="/assets/images/icons/chat-message.png" alt="icon">
+                </div>
+                <h4 class="text-gray-100 mb-3">創業分享討論區</h4>
+                <p class="feature-content">創業路上不孤單!我們的討論區是你尋求建議和分享創業心得的理想場所。來自各行各業的創業者在這裡匯聚,交流心得、討論問題,共同助力彼此的創業夢想成真。</p>
+              </div>      
+            </div>
           </div>
-          <div class="col-4">
-            <div class="text-center">
-              <i class="bi bi-star"></i>
-              <h3 class="mb-3">真實評價</h3>
-              <p>合作更安心!我們的真實評價系統讓你在選擇創業夥伴時更加有依據。每一位用戶都可以留下真實評價,讓你了解對方的合作表現和口碑,確保每一次合作都更有保障。</p>
-            </div>        
-          </div>
-          <div class="col-4">
-            <div class="text-center">
-              <i class="bi bi-star"></i>
-              <h3 class="mb-3">創業分享討論區</h3>
-              <p>創業路上不孤單!我們的討論區是你尋求建議和分享創業心得的理想場所。來自各行各業的創業者在這裡匯聚,交流心得、討論問題,共同助力彼此的創業夢想成真。</p>
-            </div>      
-          </div>
-        </div>
-       </div>
+         </div>
+       </section>
+       
 
        <!-- 熱門創業項目 -->
-        <div class="container py-5">
-          <h2 class="fw-bold text-center mb-5">熱門創業項目</h2>
-          <div class="row">
-            <div class="col-3">
-              <div class="card popular-card text-center">
-                <div class="card-body p-3">
-                  <h5 class="mb-3">綠能創新股份有限公司</h5>
-                  <div class="d-flex justify-content-center align-items-center mb-4">
-                    <span class="me-2">環保科技</span><span>|</span><span class="ms-2">智慧設備</span>
+        <div class="bg-gray-1000">
+          <div class="container py-5 py-lg-15">
+            <h2 class="fw-bold text-center text-primary-600 mb-lg-8">熱門創業項目</h2>
+            <!-- <div class="row">
+              <div class="col-3">
+                <div class="card popular-card text-center">
+                  <div class="card-body p-3">
+                    <h5 class="mb-3">綠能創新股份有限公司</h5>
+                    <div class="d-flex justify-content-center align-items-center mb-4">
+                      <span class="me-2">環保科技</span><span>|</span><span class="ms-2">智慧設備</span>
+                    </div>
+                    <p>
+                      專注於開發可持續能源解決方案,致力於減少碳足跡並推動清潔能源的使用。
+                    </p>
                   </div>
-                  <p>
-                    專注於開發可持續能源解決方案,致力於減少碳足跡並推動清潔能源的使用。
-                  </p>
+                  <a href="#" class="btn btn-light rounded-0">
+                    <p>資金規模</p>
+                    <strong>$ 40,000000 NTD</strong>
+                  </a>
                 </div>
-                <a href="#" class="btn btn-light rounded-0">
-                  <p>資金規模</p>
-                  <strong>$ 40,000000 NTD</strong>
-                </a>
               </div>
-            </div>
-            <div class="col-3">
-              <div class="card popular-card text-center">
-                <div class="card-body p-3">
-                  <h5 class="mb-3">綠能創新股份有限公司</h5>
-                  <div class="d-flex justify-content-center align-items-center mb-4">
-                    <span class="me-2">環保科技</span><span>|</span><span class="ms-2">智慧設備</span>
+              <div class="col-3">
+                <div class="card popular-card text-center">
+                  <div class="card-body p-3">
+                    <h5 class="mb-3">綠能創新股份有限公司</h5>
+                    <div class="d-flex justify-content-center align-items-center mb-4">
+                      <span class="me-2">環保科技</span><span>|</span><span class="ms-2">智慧設備</span>
+                    </div>
+                    <p>
+                      專注於開發可持續能源解決方案,致力於減少碳足跡並推動清潔能源的使用。
+                    </p>
                   </div>
-                  <p>
-                    專注於開發可持續能源解決方案,致力於減少碳足跡並推動清潔能源的使用。
-                  </p>
+                  <a href="#" class="btn btn-light rounded-0">
+                    <p>資金規模</p>
+                    <strong>$ 40,000000 NTD</strong>
+                  </a>
                 </div>
-                <a href="#" class="btn btn-light rounded-0">
-                  <p>資金規模</p>
-                  <strong>$ 40,000000 NTD</strong>
-                </a>
               </div>
-            </div>
-            <div class="col-3">
-              <div class="card popular-card text-center">
-                <div class="card-body p-3">
-                  <h5 class="mb-3">綠能創新股份有限公司</h5>
-                  <div class="d-flex justify-content-center align-items-center mb-4">
-                    <span class="me-2">環保科技</span><span>|</span><span class="ms-2">智慧設備</span>
+              <div class="col-3">
+                <div class="card popular-card text-center">
+                  <div class="card-body p-3">
+                    <h5 class="mb-3">綠能創新股份有限公司</h5>
+                    <div class="d-flex justify-content-center align-items-center mb-4">
+                      <span class="me-2">環保科技</span><span>|</span><span class="ms-2">智慧設備</span>
+                    </div>
+                    <p>
+                      專注於開發可持續能源解決方案,致力於減少碳足跡並推動清潔能源的使用。
+                    </p>
                   </div>
-                  <p>
-                    專注於開發可持續能源解決方案,致力於減少碳足跡並推動清潔能源的使用。
-                  </p>
+                  <a href="#" class="btn btn-light rounded-0">
+                    <p>資金規模</p>
+                    <strong>$ 40,000000 NTD</strong>
+                  </a>
                 </div>
-                <a href="#" class="btn btn-light rounded-0">
-                  <p>資金規模</p>
-                  <strong>$ 40,000000 NTD</strong>
-                </a>
               </div>
-            </div>
-            <div class="col-3">
-              <div class="card popular-card text-center">
-                <div class="card-body p-3">
-                  <h5 class="mb-3">綠能創新股份有限公司</h5>
-                  <div class="d-flex justify-content-center align-items-center mb-4">
-                    <span class="me-2">環保科技</span><span>|</span><span class="ms-2">智慧設備</span>
+              <div class="col-3">
+                <div class="card popular-card text-center">
+                  <div class="card-body p-3">
+                    <h5 class="mb-3">綠能創新股份有限公司</h5>
+                    <div class="d-flex justify-content-center align-items-center mb-4">
+                      <span class="me-2">環保科技</span><span>|</span><span class="ms-2">智慧設備</span>
+                    </div>
+                    <p>
+                      專注於開發可持續能源解決方案,致力於減少碳足跡並推動清潔能源的使用。
+                    </p>
                   </div>
-                  <p>
-                    專注於開發可持續能源解決方案,致力於減少碳足跡並推動清潔能源的使用。
-                  </p>
+                  <a href="#" class="btn btn-light rounded-0">
+                    <p>資金規模</p>
+                    <strong>$ 40,000000 NTD</strong>
+                  </a>
                 </div>
-                <a href="#" class="btn btn-light rounded-0">
-                  <p>資金規模</p>
-                  <strong>$ 40,000000 NTD</strong>
-                </a>
               </div>
-            </div>
+            </div> -->
+            <!-- Swiper -->
+  <div class="swiper mySwiper">
+    <div class="swiper-wrapper">
+      <div class="swiper-slide">Slide 1</div>
+      <div class="swiper-slide">Slide 2</div>
+      <div class="swiper-slide">Slide 3</div>
+      <div class="swiper-slide">Slide 4</div>
+      <div class="swiper-slide">Slide 5</div>
+      <div class="swiper-slide">Slide 6</div>
+    </div>
+    <div class="swiper-button-next"></div>
+    <div class="swiper-button-prev"></div>
+  </div>
           </div>
         </div>
+        
 
 
         <!-- 推薦投資人 -->
@@ -321,6 +348,22 @@
           </div>
          </div>
 
+
+         <!-- Swiper JS -->
+         <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+
+         <script>
+          var swiper = new Swiper(".mySwiper", {
+            //一個畫面顯示幾個內容
+            slidesPerView: 4,
+            //每個內容之間的間隔為 16px
+            spaceBetween: 16,
+            navigation: {
+              nextEl: ".swiper-button-next",
+              prevEl: ".swiper-button-prev",
+            },
+          });
+         </script>
 
 
 
