--- a/pages/ProjectList-project.html
+++ b/pages/ProjectList-project.html
@@ -93,7 +93,7 @@
         </div>
       </div>
 
-    <!-- 領域地圖 -->
+    <!-- 領域地圖！ -->
       <div class="container py-5">
         <div class="row">
           <div class="col-12">
