--- a/pages/activity.html
+++ b/pages/activity.html
@@ -61,7 +61,7 @@
                 </div>
               </div>
               <div class="col-md-3 d-flex flex-column flex-lg-row justify-content-center">
-                <a href="activity.html" class="btn btn-primary btn-lg">查看詳情</a>
+                <a href="activity-casper.html" class="btn btn-primary btn-lg">查看詳情</a>
               </div>
             </div>
           </div>
