--- a/pages/index.html
+++ b/pages/index.html
@@ -161,14 +161,122 @@
               </div>
             </div> -->
             <!-- Swiper -->
-  <div class="swiper mySwiper">
-    <div class="swiper-wrapper">
-      <div class="swiper-slide">Slide 1</div>
-      <div class="swiper-slide">Slide 2</div>
-      <div class="swiper-slide">Slide 3</div>
-      <div class="swiper-slide">Slide 4</div>
-      <div class="swiper-slide">Slide 5</div>
-      <div class="swiper-slide">Slide 6</div>
+  <div class="swiper businessSwiper">
+    <div class="swiper-wrapper pe-12">
+      <!-- 1 -->
+      <div class="business-swiper swiper-slide">
+        <div class="card popular-card text-center">
+          <div class="popular-card-body">
+            <img class="company-logo mb-3" src="/assets/images/logo/green-logo.png" alt="green-logo">
+            <h4 class="mb-3 popular-card-title text-ellipsis text-primary-600">綠能創新股份有限公司</h4>
+            <div class="d-flex justify-content-center align-items-center mb-4">
+              <h5 class="fs-5 me-2">環保科技｜智慧設備</h5>
+            </div>
+            <p>
+              專注於開發可持續能源解決方案,致力於減少碳足跡並推動清潔能源的使用
+            </p>
+          </div>
+          <a href="#" class="btn btn-gray-600 py-3">
+            <p class="fs-5">資金規模</p>
+            <p class="fs-5 fw-bold text-white">NT$ 40,000000</p>
+          </a>
+        </div>
+      </div>
+      <!-- 2 -->
+      <div class="swiper-slide">
+        <div class="card popular-card text-center">
+          <div class="popular-card-body">
+            <img class="company-logo mb-3" src="/assets/images/logo/higger-logo.png" alt="green-logo">
+            <h4 class="mb-3 popular-card-title text-ellipsis text-primary-600">林媽媽中式餐館</h4>
+            <div class="d-flex justify-content-center align-items-center mb-4">
+              <h5 class="fs-5 me-2">餐飲</h5>
+            </div>
+            <p>
+              我們中式餐館注重精緻的中國美食，結合中華傳統與創新，提供優質的用餐體驗
+            </p>
+          </div>
+          <a href="#" class="btn btn-gray-600 py-3">
+            <p class="fs-5">資金規模</p>
+            <p class="fs-5 fw-bold text-white">NT$ 800,000</p>
+          </a>
+        </div>
+      </div>
+      <!-- 3 -->
+      <div class="swiper-slide">
+        <div class="card popular-card text-center">
+          <div class="popular-card-body">
+            <img class="company-logo mb-3" src="/assets/images/logo/checkmate-logo.png" alt="green-logo">
+            <h4 class="mb-3 popular-card-title text-ellipsis text-primary-600">迅捷物流股份有限公司</h4>
+            <div class="d-flex justify-content-center align-items-center mb-4">
+              <h5 class="fs-5 me-2">物流運輸</h5>
+            </div>
+            <p>
+              提供高效物流與供應鏈管理服務，確保貨物快速安全抵達目的地
+            </p>
+          </div>
+          <a href="#" class="btn btn-gray-600 py-3">
+            <p class="fs-5">資金規模</p>
+            <p class="fs-5 fw-bold text-white">$ NT$ 20,000,000</p>
+          </a>
+        </div>
+      </div>
+      <!-- 4 -->
+      <div class="swiper-slide">
+        <div class="card popular-card text-center">
+          <div class="popular-card-body">
+            <img class="company-logo mb-3" src="/assets/images/logo/legally-logo.png" alt="green-logo">
+            <h4 class="mb-3 popular-card-title text-ellipsis text-primary-600">尚品生活股份有限公司</h4>
+            <div class="d-flex justify-content-center align-items-center mb-4">
+              <h5 class="fs-5 me-2">電子商務</h5>
+            </div>
+            <p>
+              提供多樣化的高品質產品，打造便捷愉快的購物體驗
+            </p>
+          </div>
+          <a href="#" class="btn btn-gray-600 py-3">
+            <p class="fs-5">資金規模</p>
+            <p class="fs-5 fw-bold text-white">NT$ 1,500,000</p>
+          </a>
+        </div>
+      </div>
+      <!-- 5 -->
+      <div class="swiper-slide">
+        <div class="card popular-card text-center">
+          <div class="popular-card-body">
+            <img class="company-logo mb-3" src="/assets/images/logo/green-logo.png" alt="green-logo">
+            <h4 class="mb-3 popular-card-title text-ellipsis text-primary-600">綠能創新股份有限公司</h4>
+            <div class="d-flex justify-content-center align-items-center mb-4">
+              <h5 class="fs-5 me-2">環保科技｜智慧設備</h5>
+            </div>
+            <p>
+              專注於開發可持續能源解決方案,致力於減少碳足跡並推動清潔能源的使用。
+            </p>
+          </div>
+          <a href="#" class="btn btn-gray-600 py-3">
+            <p class="fs-5">資金規模</p>
+            <p class="fs-5 fw-bold text-white">$ 40,000000 NTD</p>
+          </a>
+        </div>
+      </div>
+      <!-- 6 -->
+      <div class="swiper-slide">
+        <div class="card popular-card text-center">
+          <div class="popular-card-body">
+            <img class="company-logo mb-3" src="/assets/images/logo/green-logo.png" alt="green-logo">
+            <h4 class="mb-3 popular-card-title text-ellipsis text-primary-600">綠能創新股份有限公司</h4>
+            <div class="d-flex justify-content-center align-items-center mb-4">
+              <h5 class="fs-5 me-2">環保科技｜智慧設備</h5>
+            </div>
+            <p>
+              專注於開發可持續能源解決方案,致力於減少碳足跡並推動清潔能源的使用。
+            </p>
+          </div>
+          <a href="#" class="btn btn-gray-600 py-3">
+            <p class="fs-5">資金規模</p>
+            <p class="fs-5 fw-bold text-white">$ 40,000000 NTD</p>
+          </a>
+        </div>
+      </div>
     </div>
     <div class="swiper-button-next"></div>
     <div class="swiper-button-prev"></div>
@@ -353,7 +461,7 @@
          <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
          <script>
-          var swiper = new Swiper(".mySwiper", {
+          var swiper = new Swiper(".businessSwiper", {
             //一個畫面顯示幾個內容
             slidesPerView: 4,
             //每個內容之間的間隔為 16px
