--- a/pages/activity.html
+++ b/pages/activity.html
@@ -9,12 +9,12 @@
 <body>
     <%- include('./layout/header'); -%>
   
-<main class="bg-gray-1000">
+<main class="bg-gray-1000 py-15">
 
      
       <!-- 輪播圖 -->
-    <section class="container ">
-      <h2 class="text-center text-white">熱門活動</h2>
+    <section class="container">
+      <h2 class="text-center text-primary-600 my-8">熱門活動</h2>
     <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-indicators">
           <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -44,7 +44,7 @@
     </section>
     
     <!-- 列表 -->
-     <section class="container py-8">
+     <section class="container pt-9">
         <div class="card mb-4 ">
             <div class="row g-0 d-flex align-items-center bg-gray-800">
               <div class="col-md-3">
@@ -52,7 +52,7 @@
               </div>
               <div class="col-md-6">
                 <div class="card-body text-white bd-gray-800">
-                  <h2 class="card-title">卡斯柏創業分享會</h2>
+                  <h2 class="card-title text-primary-1000 fw-bold">卡斯柏創業分享會</h2>
                   <ul class="fs-5">
                     <li>日期：2024年9月15日</li>
                     <li>時間：14:00-17:00</li>
@@ -61,7 +61,7 @@
                 </div>
               </div>
               <div class="col-md-3 d-flex flex-column flex-lg-row justify-content-center">
-                <a href="activity-casper.html" class="btn btn-primary btn-lg">查看詳情</a>
+                <a href="activity-casper.html" class="btn btn-primary-600 fw-bolder btn-lg">查看詳情</a>
               </div>
             </div>
           </div>
@@ -73,7 +73,7 @@
               </div>
               <div class="col-md-6">
                 <div class="card-body text-white">
-                  <h2 class="card-title">創夢工坊展覽會</h2>
+                  <h2 class="card-title text-primary-1000 fw-bold">創夢工坊展覽會</h2>
                   <ul class="fs-5">
                     <li>日期：2024年9月20日</li>
                     <li>時間：14:00-17:00</li>
@@ -82,7 +82,7 @@
                 </div>
               </div>
               <div class="col-md-3 d-flex flex-column flex-lg-row justify-content-center">
-                <a href="activity.html" class="btn btn-primary btn-lg">查看詳情</a>
+                <a href="activity.html" class="btn btn-primary-600 fw-bolder btn-lg">查看詳情</a>
               </div>
             </div>
           </div>
@@ -94,7 +94,7 @@
               </div>
               <div class="col-md-6">
                 <div class="card-body text-white">
-                  <h2 class="card-title ">與投資人來一場聯誼活動吧</h2>
+                  <h2 class="card-title text-primary-1000 fw-bold">與投資人來一場聯誼活動吧</h2>
                   <ul class="fs-5">
                     <li>日期：2024年9月15日</li>
                     <li>時間：14:00-17:00</li>
@@ -103,7 +103,7 @@
                 </div>
               </div>
               <div class="col-md-3 d-flex flex-column flex-lg-row justify-content-center">
-                <a href="activity.html" class="btn btn-primary btn-lg">查看詳情</a>
+                <a href="activity.html" class="btn btn-primary-600 fw-bolder btn-lg">查看詳情</a>
               </div>
             </div>
           </div>
@@ -115,7 +115,7 @@
               </div>
               <div class="col-md-6">
                 <div class="card-body text-white">
-                  <h2 class="card-title">創夢工坊展覽會</h2>
+                  <h2 class="card-title text-primary-1000 fw-bold">創夢工坊展覽會</h2>
                   <ul class="fs-5">
                     <li>日期：2024年9月15日</li>
                     <li>時間：14:00-17:00</li>
@@ -124,7 +124,7 @@
                 </div>
               </div>
               <div class="col-md-3 d-flex flex-column flex-lg-row justify-content-center">
-                <a href="activity.html" class="btn btn-primary btn-lg">查看詳情</a>
+                <a href="activity.html" class="btn btn-primary-600 fw-bolder btn-lg">查看詳情</a>
               </div>
             </div>
           </div>
