--- a/pages/discuss.html
+++ b/pages/discuss.html
@@ -9,15 +9,15 @@
 <body>
     <%- include('./layout/header'); -%>
   
-    <main>
-       <section class="container">
+    <main class="bg-gray-1000 py-15">
+       <section class="container py-8">
            <div class="row">
-            <div class="col-8 text-center">
+            <div class="col-8 text-center text-primary-600">
                 <h2>文章列表</h2>
             </div>
             <div class="col-4">
                 <div class="col-md-3 d-flex flex-column flex-lg-row justify-content-center">
-                    <a href="post-article.html" class="btn btn-primary">發表文章</a>
+                    <a href="post-article.html" class="btn btn-primary-600 fw-bolder">發表文章</a>
                   </div>
             </div>
            </div>
@@ -36,7 +36,7 @@
             </thead>
 
             
-            <tbody class="text-center  table table-sm">
+            <tbody class="text-center  table table-sm table-gray-600">
               <tr>
                 <th scope="row"><a href="#">是否該放棄年薪7百萬的工作轉去創業?</a></th>
                 <td>2023/7/2  22:04</td>
@@ -125,7 +125,7 @@
           </table>
 
           <nav aria-label="Page navigation example">
-            <ul class="pagination justify-content-center">
+            <ul class="pagination pagination-bg-gray-1000 justify-content-center">
               <li class="page-item ">
                 <a class="page-link"><i class="bi bi-chevron-left"></i></a>
               </li>
