--- a/pages/ProjectList-project.html
+++ b/pages/ProjectList-project.html
@@ -10,8 +10,8 @@
 
     <!-- search -->
     <div class="search-bg d-flex flex-column justify-content-center align-items-center bg-gray-1000">
-          <div class="w-100 d-flex align-items-center justify-content-center my-5">
-            <div class="banner-input input-group w-100 my-3 me-3">
+          <div class="w-25 d-flex align-items-center justify-content-center my-15">
+            <div class="banner-input input-group my-5 me-3">
               <input type="search" class="form-control ps-1 bg-gray-600 rounded-0 border border-1 border-white" placeholder="搜尋創業項目" id="search">
             </div>
             <button type="submit" class="search-btn btn btn-primary-600 rounded-0">搜尋</button>
