更新頁首頁尾連結

--- a/pages/post-article.html
+++ b/pages/post-article.html
@@ -14,7 +14,7 @@
          <h2 class="text-center py-8  fw-bolder text-primary-600">發表文章</h2>
         <section class="container">
               <div class="row">
-                <label for="colFormLabelLg" class="col-sm-2 col-form-label col-form-label-lg text-end fw-bolder text-gray-">標題</label>
+                <label for="colFormLabelLg" class="col-sm-2 col-form-label col-form-label-lg text-end fw-bolder text-gray-400">標題</label>
                 <div class="col-sm-10">
                   <input type="text" class="form-control form-control-lg bg-gray-1000 bg-opacity-50 text-white" id="colFormLabelLg" >
                 </div>
