--- a/pages/project/Project-photo.html
+++ b/pages/project/Project-photo.html
@@ -8,10 +8,10 @@
 <body>
     <%- include('./layout/header'); -%>
   
-    <%- include('./layout/Project-information'); -%>
+    <%- include('./components/Project-information'); -%>
     <div class="bg-gray-1000">
         <div class="container">
-            <div class="">
+            <div>
                 <img src="/assets/images/廚師.png" class="pb-15 d-block w-50 mx-auto" alt="chef">
             </div>
         </div>
@@ -20,7 +20,7 @@
     <%- include('./layout/footer'); -%>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script type="module" src="../main.js"></script>
+    <script type="module" src="/main.js"></script>
 
 
 </body>
