--- a/pages/project/Project-team.html
+++ b/pages/project/Project-team.html
@@ -8,7 +8,7 @@
 <body>
     <%- include('./layout/header'); -%>
   
-    <%- include('./layout/Project-information'); -%>
+    <%- include('./components/Project-information'); -%>
     <div class="bg-gray-1000">
         <div class="container">
             <div class="row">
@@ -33,7 +33,7 @@
     <%- include('./layout/footer'); -%>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script type="module" src="../main.js"></script>
+    <script type="module" src="/main.js"></script>
 
 
 </body>
