--- a/pages/index.html
+++ b/pages/index.html
@@ -23,6 +23,7 @@
     rel="stylesheet">
   <!-- Link Swiper's CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+  <link rel="shortcut icon" href="../assets/images/icons/favicon.ico" rel="shortcut icon" />
 </head>
 
 <body>
