--- a/pages/admin/admin-page.html
+++ b/pages/admin/admin-page.html
@@ -10,7 +10,7 @@
     <link rel="shortcut icon" href="../../assets/images/icons/favicon.ico" rel="shortcut icon" />
   </head>
   <body>
-    <div class="container-fluid fw-bold admin">
+    <div class="container-fluid admin">
       <div class="row vh-100">
         <div class="col-2 bg-gray-1000 pt-5">
           <%- include('./layout/admin-sidebar'); -%>
