--- a/pages/admin/admin-login.html
+++ b/pages/admin/admin-login.html
@@ -10,53 +10,55 @@
     <link rel="shortcut icon" href="../../assets/images/icons/favicon.ico" rel="shortcut icon" />
   </head>
   <body>
-    <div class="container admin">
-      <div class="row justify-content-center align-items-center vh-100">
-        <div class="col-4 bg-gray-1000 text-white" style="height: 450px">
-          <div class="row justify-content-center align-items-center h-100">
-            <div class="col-10">
-              <div class="text-center">
-                <img
-                  src="../../assets/images/創夢工坊-logo.png"
-                  alt="logo"
-                  class="admin-logo mb-6"
-                />
+    <div class="bg-gray-100">
+      <div class="container admin">
+        <div class="row justify-content-center align-items-center vh-100">
+          <div class="col-4 bg-gray-1000 text-white" style="height: 450px">
+            <div class="row justify-content-center align-items-center h-100">
+              <div class="col-10">
+                <div class="text-center">
+                  <img
+                    src="../../assets/images/創夢工坊-logo.png"
+                    alt="logo"
+                    class="admin-logo mb-6"
+                  />
+                </div>
+                <h2 class="fs-5 text-center mb-3 fw-bold">後台管理系統</h2>
               </div>
-              <h2 class="fs-5 text-center mb-3 fw-bold">後台管理系統</h2>
             </div>
           </div>
-        </div>
-        <div class="col-4 bg-white" style="height: 450px">
-          <div class="row justify-content-center align-items-center h-100">
-            <div class="col-9">
-              <h2 class="fs-3 mb-2 fw-bold">管理者登入</h2>
-              <h3 class="fs-6 mb-3"><small>觀迎回來，請登入您的帳號</small></h3>
-              <div class="form-floating mb-3">
-                <input
-                  type="email"
-                  class="form-control"
-                  id="floatingInput"
-                  placeholder="Email address"
-                  v-model="user.username"
-                />
-                <label for="floatingInput">Email address</label>
+          <div class="col-4 bg-white" style="height: 450px">
+            <div class="row justify-content-center align-items-center h-100">
+              <div class="col-9">
+                <h2 class="fs-3 mb-2 fw-bold">管理者登入</h2>
+                <h3 class="fs-6 mb-3"><small>觀迎回來，請登入您的帳號</small></h3>
+                <div class="form-floating mb-3">
+                  <input
+                    type="email"
+                    class="form-control"
+                    id="floatingInput"
+                    placeholder="Email address"
+                    v-model="user.username"
+                  />
+                  <label for="floatingInput">Email address</label>
+                </div>
+                <div class="form-floating mb-3">
+                  <input
+                    type="password"
+                    class="form-control"
+                    id="floatingPassword"
+                    placeholder="Password"
+                    v-model="user.password"
+                  />
+                  <label for="floatingPassword">Password</label>
+                </div>
+                <button type="button" class="btn btn-primary-600 w-100 mb-3 fw-bold" @click="login">
+                  登入
+                </button>
+                <button class="text-center btn w-100 fw-bold">
+                  <RouterLink to="/">回到首頁</RouterLink>
+                </button>
               </div>
-              <div class="form-floating mb-3">
-                <input
-                  type="password"
-                  class="form-control"
-                  id="floatingPassword"
-                  placeholder="Password"
-                  v-model="user.password"
-                />
-                <label for="floatingPassword">Password</label>
-              </div>
-              <button type="button" class="btn btn-primary-600 w-100 mb-3 fw-bold" @click="login">
-                登入
-              </button>
-              <button class="text-center btn w-100 fw-bold">
-                <RouterLink to="/">回到首頁</RouterLink>
-              </button>
             </div>
           </div>
         </div>
