--- a/pages/admin/admin-page.html
+++ b/pages/admin/admin-page.html
@@ -21,12 +21,10 @@
               <%- include('./components/admin/account'); -%>
             </div>
             <div id="startups" class="content-section" style="display: none;">
-              <h1 class="fs-2 mb-7 fw-bold">創業項目</h1>
-              <p>這裡是創業項目的內容。</p>
+              <%- include('./components/admin/startup'); -%>
             </div>
             <div id="investors" class="content-section" style="display: none;">
-              <h1 class="fs-2 mb-7 fw-bold">投資者</h1>
-              <p>這裡是投資者的內容。</p>
+              <%- include('./components/admin/investor'); -%>
             </div>
             <div id="activities" class="content-section" style="display: none;">
               <h1 class="fs-2 mb-7 fw-bold">活動管理</h1>
@@ -48,7 +46,6 @@
         </div>
       </div>
     </div>
-
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.9.2/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
