--- a/pages/discuss.html
+++ b/pages/discuss.html
@@ -17,7 +17,7 @@
                 <h2>文章列表</h2>
             </div>
             <div class="col-4 ">
-                    <a href="post-article.html" class="btn btn-primary-600 fw-bolder">發表文章</a>
+                    <a href="post-article.html" class="btn btn-primary-600 fw-bolder py-lg-3 py-2 px-4">發表文章</a>
                   </div>
            </div>
            
@@ -38,85 +38,85 @@
             
             <tbody class="text-center  table table-sm table-gray-600">
               <tr>
-                <th scope="row"><a href="#">是否該放棄年薪7百萬的工作轉去創業?</a></th>
+                <th scope="row"><a href="article-content.html">是否該放棄年薪7百萬的工作轉去創業?</a></th>
                 <td>2023/7/2  22:04</td>
                 <td>2023/8/2  16:04</td>
                 <td>66</td>
               </tr>
               <tr>
-                <th scope="row"><a href="#">是否該放棄年薪7百萬的工作轉去創業?</a></th>
+                <th scope="row"><a href="article-content.html">是否該放棄年薪7百萬的工作轉去創業?</a></th>
                 <td>2023/7/2  22:04</td>
                 <td>2023/8/2  16:04</td>
                 <td>66</td>
               </tr>
               <tr>
-                <th scope="row"><a href="#">是否該放棄年薪7百萬的工作轉去創業?</a></th>
+                <th scope="row"><a href="article-content.html">是否該放棄年薪7百萬的工作轉去創業?</a></th>
                 <td>2023/7/2  22:04</td>
                 <td>2023/8/2  16:04</td>
                 <td>66</td>
               </tr>
               <tr>
-                <th scope="row"><a href="#">是否該放棄年薪7百萬的工作轉去創業?</a></th>
+                <th scope="row"><a href="article-content.html">是否該放棄年薪7百萬的工作轉去創業?</a></th>
                 <td>2023/7/2  22:04</td>
                 <td>2023/8/2  16:04</td>
                 <td>66</td>
               </tr>
               <tr>
-                <th scope="row"><a href="#">是否該放棄年薪7百萬的工作轉去創業?</a></th>
+                <th scope="row"><a href="article-content.html">是否該放棄年薪7百萬的工作轉去創業?</a></th>
                 <td>2023/7/2  22:04</td>
                 <td>2023/8/2  16:04</td>
                 <td>66</td>
               </tr>
               <tr>
-                <th scope="row"><a href="#">是否該放棄年薪7百萬的工作轉去創業?</a></th>
+                <th scope="row"><a href="article-content.html">是否該放棄年薪7百萬的工作轉去創業?</a></th>
                 <td>2023/7/2  22:04</td>
                 <td>2023/8/2  16:04</td>
                 <td>66</td>
               </tr>
               <tr>
-                <th scope="row"><a href="#">是否該放棄年薪7百萬的工作轉去創業?</a></th>
+                <th scope="row"><a href="article-content.html">是否該放棄年薪7百萬的工作轉去創業?</a></th>
                 <td>2023/7/2  22:04</td>
                 <td>2023/8/2  16:04</td>
                 <td>66</td>
               </tr>
               <tr>
-                <th scope="row"><a href="#">是否該放棄年薪7百萬的工作轉去創業?</a></th>
+                <th scope="row"><a href="article-content.html">是否該放棄年薪7百萬的工作轉去創業?</a></th>
                 <td>2023/7/2  22:04</td>
                 <td>2023/8/2  16:04</td>
                 <td>66</td>
               </tr>
               <tr>
-                <th scope="row"><a href="#">是否該放棄年薪7百萬的工作轉去創業?</a></th>
+                <th scope="row"><a href="article-content.html">是否該放棄年薪7百萬的工作轉去創業?</a></th>
                 <td>2023/7/2  22:04</td>
                 <td>2023/8/2  16:04</td>
                 <td>66</td>
               </tr>
               <tr>
-                <th scope="row"><a href="#">是否該放棄年薪7百萬的工作轉去創業?</a></th>
+                <th scope="row"><a href="article-content.html">是否該放棄年薪7百萬的工作轉去創業?</a></th>
                 <td>2023/7/2  22:04</td>
                 <td>2023/8/2  16:04</td>
                 <td>66</td>
               </tr>
               <tr>
-                <th scope="row"><a href="#">是否該放棄年薪7百萬的工作轉去創業?</a></th>
+                <th scope="row"><a href="article-content.html">是否該放棄年薪7百萬的工作轉去創業?</a></th>
                 <td>2023/7/2  22:04</td>
                 <td>2023/8/2  16:04</td>
                 <td>66</td>
               </tr>
               <tr>
-                <th scope="row"><a href="#">是否該放棄年薪7百萬的工作轉去創業?</a></th>
+                <th scope="row"><a href="article-content.html">是否該放棄年薪7百萬的工作轉去創業?</a></th>
                 <td>2023/7/2  22:04</td>
                 <td>2023/8/2  16:04</td>
                 <td>66</td>
               </tr>
               <tr>
-                <th scope="row"><a href="#">是否該放棄年薪7百萬的工作轉去創業?</a></th>
+                <th scope="row"><a href="article-content.html">是否該放棄年薪7百萬的工作轉去創業?</a></th>
                 <td>2023/7/2  22:04</td>
                 <td>2023/8/2  16:04</td>
                 <td>66</td>
               </tr>
               <tr>
-                <th scope="row"><a href="#">是否該放棄年薪7百萬的工作轉去創業?</a></th>
+                <th scope="row"><a href="article-content.html">是否該放棄年薪7百萬的工作轉去創業?</a></th>
                 <td>2023/7/2  22:04</td>
                 <td>2023/8/2  16:04</td>
                 <td>66</td>
@@ -125,14 +125,14 @@
           </table>
 
           <nav aria-label="Page navigation example">
-            <ul class="pagination pagination-bg-gray-1000 justify-content-center">
-              <li class="page-item ">
-                <a class="page-link"><i class="bi bi-chevron-left"></i></a>
+            <ul class="pagination pagination-sm pagination-bg-gray-1000 justify-content-center">
+              <li class="page-item">
+                <a class="page-link bg-transparent border-0 text-gray-400"><i class="bi bi-chevron-left"></i></a>
               </li>
-              <li class="page-item"><a class="page-link" href="#">1</a></li>
-              <li class="page-item"><a class="page-link" href="#">2</a></li>
-              <li class="page-item"><a class="page-link" href="#">3</a></li>
-              <li class="page-item"><a class="page-link" href="#"><i class="bi bi-chevron-right"></i></a></li>
+              <li class="page-item active"><a class="page-link bg-transparent border-0 text-primary-400" href="#">1</a></li>
+              <li class="page-item"><a class="page-link bg-transparent border-0 text-gray-400" href="#">2</a></li>
+              <li class="page-item"><a class="page-link bg-transparent border-0 text-gray-400" href="#">3</a></li>
+              <li class="page-item"><a class="page-link bg-transparent border-0 text-gray-400" href="#"><i class="bi bi-chevron-right"></i></a></li>
             </ul>
           </nav>
     </section> 
