--- a/pages/member/member-changepassword.html
+++ b/pages/member/member-changepassword.html
@@ -12,15 +12,15 @@
     <main class="bg-gray-1000 py-15">
        
         <section class="container pt-8">
-            <ul class="nav d-flex align-items-center">
-                <li class="nav-item">
-                  <a class="text-white" href="index.html">首頁</a>
-                </li>
-                <i class="bi bi-caret-right-fill text-white"></i>
-                <li class="nav-item">
-                  <a class="text-white" href="member.html">會員中心</a>
-                </li>
-              </ul>
+            <nav aria-label="breadcrumb">
+                <ol class="breadcrumb">
+                  <li class="breadcrumb-item text-white"><a href="index.html">首頁</a></li>
+                  <i class="bi bi-caret-right-fill text-white"></i>
+                  <li class="breadcrumb-item text-white"><a href="member.html">會員中心</a></li>
+                  <i class="bi bi-caret-right-fill text-white"></i>
+                  <li class="breadcrumb-item text-white fw-bold active" aria-current="page">修改密碼</li>
+                </ol>
+            </nav>
 
               <h2 class="text-primary-600 py-1 fw-bold border-bottom pb-8">會員中心</h2>
         </section>
@@ -33,7 +33,7 @@
                 </div>
 
            <div class="col-lg-9 col-6">
- <h2 class="text-primary-600">修改密碼</h2>
+
     <form class="my-8">
         <div class="mb-3 row">
             <label for="currentPassword" class="col-lg-2 col-form-label text-white">輸入舊密碼</label>
@@ -57,12 +57,8 @@
     </form>
 
     <div class="d-flex justify-content-around pt-8">
-        <a href="#" class="btn btn-lg  btn-gray-600 fw-bolder">
-            取消
-        </a>
-        <a href="#" class="btn  btn-lg btn-primary-600 fw-bolder">
-            儲存變更
-        </a>
+        <button class="btn btn-lg btn-gray-600 fw-bolder">取消</button>
+        <button class="btn btn-lg btn-primary-600 fw-bolder">儲存變更</button>
     </div>
 </div>
 </div>
