--- a/pages/activity.html
+++ b/pages/activity.html
@@ -13,9 +13,9 @@
 
      
       <!-- 輪播圖 -->
-    <section class="container">
-      <h2 class="text-center text-primary-600 my-8">熱門活動</h2>
-    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+    <section class="container ">
+      <h2 class="text-center text-primary-600 my-8 ">熱門活動</h2>
+    <div id="carouselExampleIndicators" class="carousel slide " data-bs-ride="carousel">
         <div class="carousel-indicators">
           <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
           <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -23,13 +23,13 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="/assets/images/卡斯柏分享會.png" class="d-block w-100" alt="創業分享會">
+            <img src="/assets/images/卡斯柏分享會.png" class="d-block " alt="創業分享會">
           </div>
           <div class="carousel-item">
-            <img src="/assets/images/創夢工坊展覽會.png" class="d-block w-100" alt="創業展覽會">
+            <img src="/assets/images/創夢工坊展覽會.png" class="d-block " alt="創業展覽會">
           </div>
           <div class="carousel-item">
-            <img src="/assets/images/聯誼活動.png" class="d-block w-100" alt="聯誼">
+            <img src="/assets/images/聯誼活動.png" class="d-block " alt="聯誼">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -42,13 +42,14 @@
         </button>
       </div>
     </section>
+  
     
     <!-- 列表 -->
      <section class="container pt-9">
         <div class="card mb-4 ">
             <div class="row g-0 d-flex align-items-center bg-gray-800">
               <div class="col-md-3">
-                <img src="/assets/images/卡斯柏分享會.png" class="img-fluid rounded-start w-100" alt="...">
+                <img src="/assets/images/卡斯柏分享會.png" class="img-fluid rounded-start w-100" alt="分享會">
               </div>
               <div class="col-md-6">
                 <div class="card-body text-white bd-gray-800">
@@ -61,7 +62,7 @@
                 </div>
               </div>
               <div class="col-md-3 d-flex flex-column flex-lg-row justify-content-center">
-                <a href="activity-casper.html" class="btn btn-primary-600 fw-bolder btn-lg">查看詳情</a>
+                <a href="activity-casper.html" class="btn btn-primary-600 fw-bolder py-lg-3 py-2 px-4">查看詳情</a>
               </div>
             </div>
           </div>
@@ -82,7 +83,7 @@
                 </div>
               </div>
               <div class="col-md-3 d-flex flex-column flex-lg-row justify-content-center">
-                <a href="activity.html" class="btn btn-primary-600 fw-bolder btn-lg">查看詳情</a>
+                <a href="activity.html" class="btn btn-primary-600 fw-bolder py-lg-3 py-2 px-4">查看詳情</a>
               </div>
             </div>
           </div>
@@ -103,7 +104,7 @@
                 </div>
               </div>
               <div class="col-md-3 d-flex flex-column flex-lg-row justify-content-center">
-                <a href="activity.html" class="btn btn-primary-600 fw-bolder btn-lg">查看詳情</a>
+                <a href="activity.html" class="btn btn-primary-600 fw-bolder py-lg-3 py-2 px-4">查看詳情</a>
               </div>
             </div>
           </div>
@@ -124,7 +125,7 @@
                 </div>
               </div>
               <div class="col-md-3 d-flex flex-column flex-lg-row justify-content-center">
-                <a href="activity.html" class="btn btn-primary-600 fw-bolder btn-lg">查看詳情</a>
+                <a href="activity.html" class="btn btn-primary-600 fw-bolder py-lg-3 py-2 px-4">查看詳情</a>
               </div>
             </div>
           </div>
