--- a/pages/post-article.html
+++ b/pages/post-article.html
@@ -14,18 +14,18 @@
          <h2 class="text-center py-8  fw-bolder text-primary-600">發表文章</h2>
         <section class="container">
               <div class="row">
-                <label for="colFormLabelLg" class="col-sm-2 col-form-label col-form-label-lg text-end fw-bolder text-gray-400">標題</label>
+                <label for="colFormLabelLg" class="col-sm-2 col-form-label col-form-label-lg text-lg-end fw-bolder text-gray-400">標題</label>
                 <div class="col-sm-10">
-                  <input type="text" class="form-control form-control-lg bg-gray-1000 bg-opacity-50 text-white" id="colFormLabelLg" >
+                  <input type="text" class="form-control form-control-lg bg-gray-800 bg-opacity-50 text-white" id="colFormLabelLg" >
                 </div>
               </div>
         </section>
 
     <section class="container my-8">
       <div class="row">
-          <label for="editor" class="col-sm-2 col-form-label col-form-label-lg text-end fw-bolder text-gray-400">內容</label>
+          <label for="editor" class="col-sm-2 col-form-label col-form-label-lg text-lg-end fw-bolder text-gray-400">內容</label>
           <div class="col-sm-10">
-              <textarea type="text" id="editor" class="form-control "></textarea>
+              <textarea type="text" id="editor" class="form-control"></textarea>
           </div>
       </div>
      </section>
@@ -33,18 +33,18 @@
      <section class="container">
       <div class="d-flex justify-content-center">
       <div class="form-check">
-          <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-          <label class="form-check-label text-white" for="flexCheckDefault">
+          <input class="form-check-input bg-gray-1000" type="checkbox" value="" id="flexCheckDefault">
+          <label class="form-check-label text-white " for="flexCheckDefault">
               我已閱讀過並同意遵守討論區規則、本站服務條款與個人資料保護法。
           </label>
       </div>
     </div>
     <div class="d-flex justify-content-center mt-8">
     <div class="me-5">
-      <a href="post-article.html" class="btn btn-primary-600 fw-bolder">發表文章</a>
+      <a href="post-article.html" class="btn btn-primary-600 fw-bolder py-lg-3 py-2 px-4">發表文章</a>
     </div>
     <div>
-      <a href="post-article.html" class="btn btn-primary-600 fw-bolder">取消</a>
+      <a href="post-article.html" class="btn btn-gray-600 fw-bolder py-lg-3 py-2 px-4">取消</a>
     </div>
   </div>
   </section>
