--- a/pages/project/ProjectList-project.html
+++ b/pages/project/ProjectList-project.html
@@ -12,7 +12,7 @@
 
       <!-- 熱門創業項目 -->
       <div class="container py-5 py-lg-15">
-        <h2 class="fw-bold fs-1 text-center text-primary-600 mb-lg-8 py-lg-8">熱門創業項目</h2>
+        <h2 class="fw-bold fs-2 text-center text-primary-600 mb-lg-8 mt-lg-15">熱門創業項目</h2>
         <!-- Swiper -->
         <div class="swiper businessSwiper">
           <div class="swiper-wrapper pe-12">
@@ -157,106 +157,107 @@
 
       <!-- 篩選產業 -->
         <div class="container py-lg-15">
-          <h2 class="fw-bold fs-1 text-center text-primary-600 mb-lg-8 py-lg-8">篩選產業</h2>
-          <div class="row">
+          <h2 class="fw-bold fs-3 text-center text-primary-600 mb-lg-1">篩選產業</h2>
+          <p class="text-gray-200 text-center fs-4 mb-lg-8">快速找尋您的投資標的</p>
+          <div class="row ">
             <div class="col-12">
-              <div class="row g-3">
-                <div class="col-lg-3">
+              <div class="row row-cols-lg-5 row-cols-md-2 row-cols-2 g-lg-3 g-1">
+                <div class="col">
                   <a class="card industry-card" href="#" style="background-image: url(/assets/images/Map-item-20.png);">
                     <h5>不限產業</h5>
                   </a>
                 </div>
-                <div class="col-lg-3">
+                <div class="col">
                   <a class="card industry-card" href="#" style="background-image: url(/assets/images/Map-item-1.png);">
                     <h5>批發/零售</h5>
                   </a>
                 </div>
-                <div class="col-lg-3">
+                <div class="col">
                   <a class="card industry-card" href="#" style="background-image: url(/assets/images/Map-item-2.png);">
                     <h5>生物科技</h5>
                   </a>
                 </div>
-                <div class="col-lg-3">
+                <div class="col">
                   <a class="card industry-card" href="#" style="background-image: url(/assets/images/Map-item-3.png);">
                     <h5>網際網路相關</h5>
                   </a>
                 </div>
-                <div class="col-lg-3">
+                <div class="col">
                   <a class="card industry-card" href="#" style="background-image: url(/assets/images/Map-item-4.png);">
                     <h5>文教相關</h5>
                   </a>
                 </div>
-                <div class="col-lg-3">
+                <div class="col">
                   <a class="card industry-card" href="#" style="background-image: url(/assets/images/Map-item-5.png);">
                     <h5>大眾傳播相關</h5>
                   </a>
                 </div>
-                <div class="col-lg-3">
+                <div class="col">
                   <a class="card industry-card" href="#" style="background-image: url(/assets/images/Map-item-6.png);">
                     <h5>旅遊/休閒/運動</h5>
                   </a>
                 </div>
-                <div class="col-lg-3">
+                <div class="col">
                   <a class="card industry-card" href="#" style="background-image: url(/assets/images/Map-item-7.png);">
                     <h5>一般服務</h5>
                   </a>
                 </div>
-                <div class="col-lg-3">
+                <div class="col">
                   <a class="card industry-card" href="#" style="background-image: url(/assets/images/Map-item-8.png);">
                     <h5>電子資訊/軟體/半導體相關</h5>
                   </a>
                 </div>
-                <div class="col-lg-3">
+                <div class="col">
                   <a class="card industry-card" href="#" style="background-image: url(/assets/images/Map-item-9.png);">
                     <h5>一般製造</h5>
                   </a>
                 </div>
-                <div class="col-lg-3">
+                <div class="col">
                   <a class="card industry-card" href="#" style="background-image: url(/assets/images/Map-item-10.png);">
                     <h5>物流/倉儲</h5>
                   </a>
                 </div>
-                <div class="col-lg-3">
+                <div class="col">
                   <a class="card industry-card" href="#" style="background-image: url(/assets/images/Map-item-11.png);">
                     <h5>政治宗教及社福相關</h5>
                   </a>
                 </div>
-                <div class="col-lg-3">
+                <div class="col">
                   <a class="card industry-card" href="#" style="background-image: url(/assets/images/Map-item-12.png);">
                     <h5>金融投顧/保險</h5>
                   </a>
                 </div>
-                <div class="col-lg-3">
+                <div class="col">
                   <a class="card industry-card" href="#" style="background-image: url(/assets/images/Map-item-13.png);">
                     <h5>法律/會計/顧問/研發</h5>
                   </a>
                 </div>
-                <div class="col-lg-3">
+                <div class="col">
                   <a class="card industry-card" href="#" style="background-image: url(/assets/images/Map-item-14.png);">
                     <h5>設計相關</h5>
                   </a>
                 </div>
-                <div class="col-lg-3">
+                <div class="col">
                   <a class="card industry-card" href="#" style="background-image: url(/assets/images/Map-item-15.png);">
                     <h5>建築營造/不動產相關</h5>
                   </a>
                 </div>
-                <div class="col-lg-3">
+                <div class="col">
                   <a class="card industry-card" href="#" style="background-image: url(/assets/images/Map-item-16.png);">
                     <h5>醫療保健/環境衛生</h5>
                   </a>
                 </div>
-                <div class="col-lg-3">
+                <div class="col">
                   <a class="card industry-card" href="#" style="background-image: url(/assets/images/Map-item-17.png);">
                     <h5>礦石及土石採取</h5>
                   </a>
                 </div>
-                <div class="col-lg-3">
+                <div class="col">
                   <a class="card industry-card" href="#" style="background-image: url(/assets/images/Map-item-18.png);">
                     <h5>住宿相關</h5>
                   </a>
                 </div>
-                <div class="col-lg-3">
+                <div class="col">
                   <a class="card industry-card" href="#" style="background-image: url(/assets/images/Map-item-19.png);">
                     <h5>餐飲</h5>
                   </a>
@@ -268,10 +269,9 @@
 
       <!-- 篩選後項目 -->
         <div class="container py-5">
-          <div class="d-flex justify-content-between  py-lg-8">
-            <div class="col-3"></div>
-            <h2 class="fw-bold  mb-5 text-center text-primary-600 col-6">餐飲 / 一般服務</h2>
-            <div class="navbar-expand-lg col-3 text-end">
+          <div class="d-flex justify-content-between">
+            <h2 class="fw-bold fs-4 text-start text-gray-200 col-6">選擇產業 ： 餐飲 / 一般服務</h2>
+            <div class="navbar-expand-lg col-6 text-end">
               <div class="dropdown">
                 <button class="btn btn-dark dropdown-toggle rounded-0 border border-1 border-white" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
                     預設排序
@@ -288,116 +288,55 @@
               </div>
             </div>
           </div>
-            <div class="card mb-3 bg-gray-800">
-                <div class="row g-0 d-flex">
-                  <div class="col-3 d-flex justify-content-center align-items-center">
-                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRAHXPluq6GtTRPDIHRv5kJPy86uFjp5sO7hg&s" class="img-fluid rounded" alt="logo">
-                  </div>
-                  <div class="col-7">
-                    <div class="card-body">
-                      <a href="Project-introduction.html" class="fs-2 text-primary-600 fw-bold m-1">Fresh Master Food Co., Ltd.</a>
-                      <div class="d-flex">
-                        <h5 class="fs-5 text-light m-1">公司成立狀態：未設立</h5>
-                        <h5 class="fs-5 text-light m-1">產業分類：餐飲</h5>
-                      </div>
-                      <p class="m-1">我們中式餐館注重精緻的中國美食,結合中華傳統與創新,提供優質的用餐體驗</p>
-                      <h1 class="fs-1 m-1 text-light">募資金額：50,000,000</h1>
-                      <p class="m-1 fs-6 text-gray-400">2024/7/25</p>
-                    </div>
-                  </div>
-                  <div class="col-2 d-flex justify-content-center align-items-center">
-                    <i class="bi bi-heart fs-3 text-light"></i>
-                  </div>
+
+          <!-- 1 -->
+          <div class="card bg-gray-800 mt-8">
+            <div class="d-flex justify-content-between created-title">              
+                <div>
+                  <a href="Project-introduction.html" class="text-white fs-3 fw-bold">林媽媽中式餐館</a>
                 </div>
-            </div>
-            <div class="card mb-3 bg-gray-800">
-              <div class="row g-0 d-flex">
-                <div class="col-3 d-flex justify-content-center align-items-center">
-                  <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRAHXPluq6GtTRPDIHRv5kJPy86uFjp5sO7hg&s" class="img-fluid rounded" alt="logo">
+                <div class="d-flex align-items-center">
+                  <a href="#">
+                    <i class="bi bi-heart text-light fs-5"></i>
+                  </a>
                 </div>
-                <div class="col-7">
-                  <div class="card-body">
-                    <a href="Project-introduction.html" class="fs-2 text-primary-600 fw-bold m-1">Fresh Master Food Co., Ltd.</a>
-                    <div class="d-flex">
-                      <h5 class="fs-5 text-light m-1">公司成立狀態：未設立</h5>
-                      <h5 class="fs-5 text-light m-1">產業分類：餐飲</h5>
-                    </div>
-                    <p class="m-1">我們中式餐館注重精緻的中國美食,結合中華傳統與創新,提供優質的用餐體驗</p>
-                    <h1 class="fs-1 m-1 text-light">募資金額：50,000,000</h1>
-                    <p class="m-1 fs-6 text-gray-400">2024/7/25</p>
-                  </div>
-                </div>
-                <div class="col-2 d-flex justify-content-center align-items-center">
-                  <i class="bi bi-heart fs-3 text-light"></i>
-                </div>
-              </div>
-            </div>
-            <div class="card mb-3 bg-gray-800">
-              <div class="row g-0 d-flex">
-                <div class="col-3 d-flex justify-content-center align-items-center">
-                  <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRAHXPluq6GtTRPDIHRv5kJPy86uFjp5sO7hg&s" class="img-fluid rounded" alt="logo">
-                </div>
-                <div class="col-7">
-                  <div class="card-body">
-                    <a href="Project-introduction.html" class="fs-2 text-primary-600 fw-bold m-1">Fresh Master Food Co., Ltd.</a>
-                    <div class="d-flex">
-                      <h5 class="fs-5 text-light m-1">公司成立狀態：未設立</h5>
-                      <h5 class="fs-5 text-light m-1">產業分類：餐飲</h5>
-                    </div>
-                    <p class="m-1">我們中式餐館注重精緻的中國美食,結合中華傳統與創新,提供優質的用餐體驗</p>
-                    <h1 class="fs-1 m-1 text-light">募資金額：50,000,000</h1>
-                    <p class="m-1 fs-6 text-gray-400">2024/7/25</p>
-                  </div>
-                </div>
-                <div class="col-2 d-flex justify-content-center align-items-center">
-                  <i class="bi bi-heart fs-3 text-light"></i>
-                </div>
-              </div>
-            </div>
-            <div class="card mb-3 bg-gray-800">
-              <div class="row g-0 d-flex">
-                <div class="col-3 d-flex justify-content-center align-items-center">
-                  <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRAHXPluq6GtTRPDIHRv5kJPy86uFjp5sO7hg&s" class="img-fluid rounded" alt="logo">
-                </div>
-                <div class="col-7">
-                  <div class="card-body">
-                    <a href="Project-introduction.html" class="fs-2 text-primary-600 fw-bold m-1">Fresh Master Food Co., Ltd.</a>
-                    <div class="d-flex">
-                      <h5 class="fs-5 text-light m-1">公司成立狀態：未設立</h5>
-                      <h5 class="fs-5 text-light m-1">產業分類：餐飲</h5>
-                    </div>
-                    <p class="m-1">我們中式餐館注重精緻的中國美食,結合中華傳統與創新,提供優質的用餐體驗</p>
-                    <h1 class="fs-1 m-1 text-light">募資金額：50,000,000</h1>
-                    <p class="m-1 fs-6 text-gray-400">2024/7/25</p>
-                  </div>
-                </div>
-                <div class="col-2 d-flex justify-content-center align-items-center">
-                  <i class="bi bi-heart fs-3 text-light"></i>
-                </div>
-              </div>
-            </div>
-            <div class="card mb-3 bg-gray-800">
-              <div class="row g-0 d-flex">
-                <div class="col-3 d-flex justify-content-center align-items-center">
-                  <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRAHXPluq6GtTRPDIHRv5kJPy86uFjp5sO7hg&s" class="img-fluid rounded" alt="logo">
-                </div>
-                <div class="col-7">
-                  <div class="card-body">
-                    <a href="Project-introduction.html" class="fs-2 text-primary-600 fw-bold m-1">Fresh Master Food Co., Ltd.</a>
-                    <div class="d-flex">
-                      <h5 class="fs-5 text-light m-1">公司成立狀態：未設立</h5>
-                      <h5 class="fs-5 text-light m-1">產業分類：餐飲</h5>
-                    </div>
-                    <p class="m-1">我們中式餐館注重精緻的中國美食,結合中華傳統與創新,提供優質的用餐體驗</p>
-                    <h1 class="fs-1 m-1 text-light">募資金額：50,000,000</h1>
-                    <p class="m-1 fs-6 text-gray-400">2024/7/25</p>
-                  </div>
-                </div>
-                <div class="col-2 d-flex justify-content-center align-items-center">
-                  <i class="bi bi-heart fs-3 text-light"></i>
-                </div>
-              </div>
-            </div>
+               </div>
+            <div class="solid border-bottom border-gray-600"></div>
+           <div class="row g-0 created-body">
+             <div class="col-md-4 d-flex align-items-center justify-content-center">
+               <img src="/assets/images/mamacook.png" class="img-fluid rounded-start" alt="林媽媽">
+             </div>
+             <div class="col-md-8">
+               <div class="card-body created-form">
+                   <div class="d-flex pb-2">
+                     <ul>
+                       <li class="fs-5 text-gray-400 fw-bold">公司成立狀態</li>
+                       <li class="fs-3 text-primary-400 fw-bold">未設立</li>
+                      </ul>
+                     <ul>
+                       <li class="fs-5 text-gray-400 fw-bold">產業分類</li>
+                       <li class="fs-3 text-primary-400 fw-bold">餐飲</li>
+                     </ul>
+                     <ul>
+                      <li class="fs-5 text-gray-400 fw-bold">規模</li>
+                      <li class="fs-3 text-primary-400 fw-bold">10人以下</li>
+                     </ul>
+                   </div>
+                   <div class="d-flex">
+                       <ul>
+                         <li class="fs-5 text-gray-400 fw-bold">資本額</li>
+                         <li class="fs-3 text-primary-400 fw-bold">3,000,000</li>
+                       </ul>
+                       <ul>
+                        <li class="fs-5 text-gray-400 fw-bold">募資金額</li>
+                        <li class="fs-3 text-primary-400 fw-bold">50,000,000</li>
+                      </ul>
+                     </div>
+                 
+               </div>
+             </div>
+           </div>
+          </div>
 
         </div>
 
