--- a/member/meber-applyActivity.html
+++ b/member/meber-applyActivity.html
@@ -55,7 +55,7 @@
                       <i class="bi bi-caret-right-fill text-white"></i>
                       <li class="breadcrumb-item text-white"><a href="member.html">會員中心</a></li>
                       <i class="bi bi-caret-right-fill text-white"></i>
-                      <li class="breadcrumb-item text-white fw-bold active" aria-current="page">創業項目收藏</li>
+                      <li class="breadcrumb-item text-white fw-bold active" aria-current="page"></li>
                     </ol>
                 </nav>
               <h2 class="text-primary-600 py-1 fw-bold border-bottom pb-8">會員中心</h2>
