--- a/post-article.html
+++ b/post-article.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>發表文章</title>
-  <script type="module" crossorigin src="/Dream-Workshop/assets/post-article-c3bcf2d1.js"></script>
-  <link rel="modulepreload" crossorigin href="/Dream-Workshop/assets/bootstrap.bundle.min-669049f5.js">
-  <link rel="stylesheet" href="/Dream-Workshop/assets/bootstrap.bundle-dad9f8ea.css">
+  <script type="module" crossorigin src="/Dream-Workshop/assets/post-article-e51849ca.js"></script>
+  <link rel="modulepreload" crossorigin href="/Dream-Workshop/assets/bootstrap.bundle.min-bcf1dd1c.js">
+  <link rel="stylesheet" href="/Dream-Workshop/assets/bootstrap.bundle-bbf8e9cc.css">
 </head>
 
 <body>
@@ -14,7 +14,7 @@
     <div class="container d-flex justify-content-center">
         <!-- logo -->
           <div class="d-flex justify-content-between align-items-center me-auto">
-            <a class="navbar-brand" href="index.html">
+            <a class="navbar-brand" href="/pages/index.html">
                 <img src="/Dream-Workshop/assets/創夢工坊-logo-fb8def81.png" alt="創夢工坊" style="width: 56px;">
             </a>
          </div>
@@ -31,7 +31,7 @@
             <a class="nav-link" href="/Dream-Workshop/project/ProjectList-project.html">找創業項目</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/Dream-Workshop/investor/ProjectList-investor.html">找投資人</a>
+            <a class="nav-link" href="investor/ProjectList-investor.html">找投資人</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">付費方案</a>
@@ -42,7 +42,7 @@
         </ul>
       </div>
 
-       <a href="#" class="btn login-btn btn-primary-600 d-none d-lg-block">
+       <a href="/pages/login.html" class="btn login-btn btn-primary-600 d-none d-lg-block">
         註冊/登入
        </a>
     </div>
