--- a/about-us.html
+++ b/about-us.html
@@ -7,15 +7,15 @@
     <title>創夢工坊</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script type="module" crossorigin src="/Dream-Workshop/assets/bootstrap.bundle.min-669049f5.js"></script>
-    <link rel="stylesheet" href="/Dream-Workshop/assets/bootstrap.bundle-dad9f8ea.css">
+    <script type="module" crossorigin src="/Dream-Workshop/assets/bootstrap.bundle.min-bcf1dd1c.js"></script>
+    <link rel="stylesheet" href="/Dream-Workshop/assets/bootstrap.bundle-bbf8e9cc.css">
   </head>
   <body>
     <nav class="header navbar navbar-expand-lg fixed-top">
     <div class="container d-flex justify-content-center">
         <!-- logo -->
           <div class="d-flex justify-content-between align-items-center me-auto">
-            <a class="navbar-brand" href="index.html">
+            <a class="navbar-brand" href="/pages/index.html">
                 <img src="/Dream-Workshop/assets/創夢工坊-logo-fb8def81.png" alt="創夢工坊" style="width: 56px;">
             </a>
          </div>
@@ -32,7 +32,7 @@
             <a class="nav-link" href="/Dream-Workshop/project/ProjectList-project.html">找創業項目</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/Dream-Workshop/investor/ProjectList-investor.html">找投資人</a>
+            <a class="nav-link" href="investor/ProjectList-investor.html">找投資人</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">付費方案</a>
@@ -43,7 +43,7 @@
         </ul>
       </div>
 
-       <a href="#" class="btn login-btn btn-primary-600 d-none d-lg-block">
+       <a href="/pages/login.html" class="btn login-btn btn-primary-600 d-none d-lg-block">
         註冊/登入
        </a>
     </div>
