--- a/discuss.html
+++ b/discuss.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>討論區</title>
-  <script type="module" crossorigin src="/Dream-Workshop/assets/bootstrap.bundle.min-669049f5.js"></script>
-  <link rel="stylesheet" href="/Dream-Workshop/assets/bootstrap.bundle-dad9f8ea.css">
+  <script type="module" crossorigin src="/Dream-Workshop/assets/bootstrap.bundle.min-bcf1dd1c.js"></script>
+  <link rel="stylesheet" href="/Dream-Workshop/assets/bootstrap.bundle-bbf8e9cc.css">
 </head>
 
 <body>
@@ -13,7 +13,7 @@
     <div class="container d-flex justify-content-center">
         <!-- logo -->
           <div class="d-flex justify-content-between align-items-center me-auto">
-            <a class="navbar-brand" href="index.html">
+            <a class="navbar-brand" href="/pages/index.html">
                 <img src="/Dream-Workshop/assets/創夢工坊-logo-fb8def81.png" alt="創夢工坊" style="width: 56px;">
             </a>
          </div>
@@ -30,7 +30,7 @@
             <a class="nav-link" href="/Dream-Workshop/project/ProjectList-project.html">找創業項目</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/Dream-Workshop/investor/ProjectList-investor.html">找投資人</a>
+            <a class="nav-link" href="investor/ProjectList-investor.html">找投資人</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">付費方案</a>
@@ -41,20 +41,20 @@
         </ul>
       </div>
 
-       <a href="#" class="btn login-btn btn-primary-600 d-none d-lg-block">
+       <a href="/pages/login.html" class="btn login-btn btn-primary-600 d-none d-lg-block">
         註冊/登入
        </a>
     </div>
   </nav>  
     <main class="bg-gray-1000 py-15">
 
-       <section class="container py-8">
+       <section class="container py-lg-8 py-5">
            <div class="row">
             <div class="col-8  text-center text-primary-600">
                 <h2>文章列表</h2>
             </div>
             <div class="col-4 ">
-                    <a href="post-article.html" class="btn btn-primary-600 fw-bolder py-lg-3 py-2 px-4">發表文章</a>
+                    <a href="post-article.html" class="btn btn-primary-600 fw-bolder py-lg-3 py-2 px-lg-4">發表文章</a>
                   </div>
            </div>
            
@@ -62,8 +62,8 @@
 
        <section class="container">
 
-         <table class="table ">
-            <thead class="table-gray-400 table-bordered">
+         <table class="table table-striped table-hover">
+            <thead class="table-gray-800 table-bordered">
               <tr class="text-center fs-5">
                 <th scope="col">標題</th>
                 <th scope="col">發佈時間</th>
@@ -73,86 +73,86 @@
             </thead>
 
             
-            <tbody class="text-center  table table-sm table-gray-600">
-              <tr>
+            <tbody class="text-center  table table-sm table-gray-800">
+              <tr class="tbody-text-hover">
                 <th scope="row"><a href="article-content.html">是否該放棄年薪7百萬的工作轉去創業?</a></th>
                 <td>2023/7/2  22:04</td>
                 <td>2023/8/2  16:04</td>
                 <td>66</td>
               </tr>
-              <tr>
+              <tr class="tbody-text-hover">
                 <th scope="row"><a href="article-content.html">是否該放棄年薪7百萬的工作轉去創業?</a></th>
                 <td>2023/7/2  22:04</td>
                 <td>2023/8/2  16:04</td>
                 <td>66</td>
               </tr>
-              <tr>
+              <tr class="tbody-text-hover">
                 <th scope="row"><a href="article-content.html">是否該放棄年薪7百萬的工作轉去創業?</a></th>
                 <td>2023/7/2  22:04</td>
                 <td>2023/8/2  16:04</td>
                 <td>66</td>
               </tr>
-              <tr>
+              <tr class="tbody-text-hover">
                 <th scope="row"><a href="article-content.html">是否該放棄年薪7百萬的工作轉去創業?</a></th>
                 <td>2023/7/2  22:04</td>
                 <td>2023/8/2  16:04</td>
                 <td>66</td>
               </tr>
-              <tr>
+              <tr class="tbody-text-hover">
                 <th scope="row"><a href="article-content.html">是否該放棄年薪7百萬的工作轉去創業?</a></th>
                 <td>2023/7/2  22:04</td>
                 <td>2023/8/2  16:04</td>
                 <td>66</td>
               </tr>
-              <tr>
+              <tr class="tbody-text-hover">
                 <th scope="row"><a href="article-content.html">是否該放棄年薪7百萬的工作轉去創業?</a></th>
                 <td>2023/7/2  22:04</td>
                 <td>2023/8/2  16:04</td>
                 <td>66</td>
               </tr>
-              <tr>
+              <tr class="tbody-text-hover">
                 <th scope="row"><a href="article-content.html">是否該放棄年薪7百萬的工作轉去創業?</a></th>
                 <td>2023/7/2  22:04</td>
                 <td>2023/8/2  16:04</td>
                 <td>66</td>
               </tr>
-              <tr>
+              <tr class="tbody-text-hover">
                 <th scope="row"><a href="article-content.html">是否該放棄年薪7百萬的工作轉去創業?</a></th>
                 <td>2023/7/2  22:04</td>
                 <td>2023/8/2  16:04</td>
                 <td>66</td>
               </tr>
-              <tr>
+              <tr class="tbody-text-hover">
                 <th scope="row"><a href="article-content.html">是否該放棄年薪7百萬的工作轉去創業?</a></th>
                 <td>2023/7/2  22:04</td>
                 <td>2023/8/2  16:04</td>
                 <td>66</td>
               </tr>
-              <tr>
+              <tr class="tbody-text-hover">
                 <th scope="row"><a href="article-content.html">是否該放棄年薪7百萬的工作轉去創業?</a></th>
                 <td>2023/7/2  22:04</td>
                 <td>2023/8/2  16:04</td>
                 <td>66</td>
               </tr>
-              <tr>
+              <tr class="tbody-text-hover">
                 <th scope="row"><a href="article-content.html">是否該放棄年薪7百萬的工作轉去創業?</a></th>
                 <td>2023/7/2  22:04</td>
                 <td>2023/8/2  16:04</td>
                 <td>66</td>
               </tr>
-              <tr>
+              <tr class="tbody-text-hover">
                 <th scope="row"><a href="article-content.html">是否該放棄年薪7百萬的工作轉去創業?</a></th>
                 <td>2023/7/2  22:04</td>
                 <td>2023/8/2  16:04</td>
                 <td>66</td>
               </tr>
-              <tr>
+              <tr class="tbody-text-hover">
                 <th scope="row"><a href="article-content.html">是否該放棄年薪7百萬的工作轉去創業?</a></th>
                 <td>2023/7/2  22:04</td>
                 <td>2023/8/2  16:04</td>
                 <td>66</td>
               </tr>
-              <tr>
+              <tr class="tbody-text-hover">
                 <th scope="row"><a href="article-content.html">是否該放棄年薪7百萬的工作轉去創業?</a></th>
                 <td>2023/7/2  22:04</td>
                 <td>2023/8/2  16:04</td>
