--- a/pages/member/meber-evaluateProjects.html
+++ b/pages/member/meber-evaluateProjects.html
@@ -45,7 +45,7 @@
                 <tbody class="text-center">
                     <tr>
                         <td>
-                          <ul>
+                          <ul class="list-unstyled">
                             <li class="text-white fs-4">林媽媽中式餐館</li>
                             <li class="text-white">公司成立狀態：未設立</li>
                             <li class="text-white">產業分類：餐飲</li>
