--- a/pages/member/meber-createdprojects.html
+++ b/pages/member/meber-createdprojects.html
@@ -52,27 +52,27 @@
                       <div class="col-md-8">
                         <div class="card-body created-form">
                             <div class="d-flex pb-2">
-                              <ul>
+                              <ul class="list-unstyled">
                                 <li class="fs-5 text-gray-400 fw-bold">公司成立狀態</li>
                                 <li class="fs-3 text-primary-400 fw-bold">未設立</li>
                                </ul>
-                              <ul>
+                              <ul class="list-unstyled">
                                 <li class="fs-5 text-gray-400 fw-bold">產業分類</li>
                                 <li class="fs-3 text-primary-400 fw-bold">餐飲</li>
                               </ul>
                             </div>
                             <div class="d-flex pb-2">
-                                <ul>
+                                <ul class="list-unstyled">
                                   <li class="fs-5 text-gray-400 fw-bold">規模</li>
                                   <li class="fs-3 text-primary-400 fw-bold">10人以下</li>
                                  </ul>
-                                <ul>
+                                <ul class="list-unstyled">
                                   <li class="fs-5 text-gray-400 fw-bold">資本額</li>
                                   <li class="fs-3 text-primary-400 fw-bold">3,000,000</li>
                                 </ul>
                               </div>
                             <div class="d-flex align-items-center">
-                                <ul>
+                                <ul class="list-unstyled">
                                   <li class="fs-5 text-gray-400 fw-bold">募資金額</li>
                                   <li class="fs-3 text-primary-400 fw-bold">50,000,000</li>
                                 </ul>
@@ -107,27 +107,27 @@
                      <div class="col-md-8">
                        <div class="card-body created-form">
                            <div class="d-flex pb-2">
-                             <ul>
+                             <ul class="list-unstyled">
                                <li class="fs-5 text-gray-400 fw-bold">公司成立狀態</li>
                                <li class="fs-3 text-primary-400 fw-bold">未設立</li>
                               </ul>
-                             <ul>
+                             <ul class="list-unstyled">
                                <li class="fs-5 text-gray-400 fw-bold">產業分類</li>
                                <li class="fs-3 text-primary-400 fw-bold">餐飲</li>
                              </ul>
                            </div>
                            <div class="d-flex pb-2">
-                               <ul>
+                               <ul class="list-unstyled">
                                  <li class="fs-5 text-gray-400 fw-bold">規模</li>
                                  <li class="fs-3 text-primary-400 fw-bold">10人以下</li>
                                 </ul>
-                               <ul>
+                               <ul class="list-unstyled">
                                  <li class="fs-5 text-gray-400 fw-bold">資本額</li>
                                  <li class="fs-3 text-primary-400 fw-bold">3,000,000</li>
                                </ul>
                              </div>
                            <div class="d-flex align-items-center">
-                               <ul>
+                               <ul class="list-unstyled">
                                  <li class="fs-5 text-gray-400 fw-bold">募資金額</li>
                                  <li class="fs-3 text-primary-400 fw-bold">800,000</li>
                                </ul>
@@ -162,27 +162,27 @@
                  <div class="col-md-8">
                    <div class="card-body created-form">
                        <div class="d-flex pb-2">
-                         <ul>
+                         <ul class="list-unstyled">
                            <li class="fs-5 text-gray-400 fw-bold">公司成立狀態</li>
                            <li class="fs-3 text-primary-400 fw-bold">未設立</li>
                           </ul>
-                         <ul>
+                         <ul class="list-unstyled">
                            <li class="fs-5 text-gray-400 fw-bold">產業分類</li>
                            <li class="fs-3 text-primary-400 fw-bold">餐飲</li>
                          </ul>
                        </div>
                        <div class="d-flex pb-2">
-                           <ul>
+                           <ul class="list-unstyled">
                              <li class="fs-5 text-gray-400 fw-bold">規模</li>
                              <li class="fs-3 text-primary-400 fw-bold">10人以下</li>
                             </ul>
-                           <ul>
+                           <ul class="list-unstyled">
                              <li class="fs-5 text-gray-400 fw-bold">資本額</li>
                              <li class="fs-3 text-primary-400 fw-bold">3,000,000</li>
                            </ul>
                          </div>
                        <div class="d-flex align-items-center">
-                           <ul>
+                           <ul class="list-unstyled">
                              <li class="fs-5 text-gray-400 fw-bold">募資金額</li>
                              <li class="fs-3 text-primary-400 fw-bold">800,000</li>
                            </ul>
