--- a/pages/admin/admin-page.html
+++ b/pages/admin/admin-page.html
@@ -27,20 +27,16 @@
               <%- include('./components/admin/investor'); -%>
             </div>
             <div id="activities" class="content-section" style="display: none;">
-              <h1 class="fs-2 mb-7 fw-bold">活動管理</h1>
-              <p>這裡是活動管理的內容。</p>
+              <%- include('./components/admin/activity'); -%>
             </div>
             <div id="pricingPlan" class="content-section" style="display: none;">
-              <h1 class="fs-2 mb-7 fw-bold">付費方案</h1>
-              <p>這裡是付費方案的內容。</p>
+              <%- include('./components/admin/pricing-plan'); -%>
             </div>
             <div id="transactions" class="content-section" style="display: none;">
-              <h1 class="fs-2 mb-7 fw-bold">交易紀錄</h1>
-              <p>這裡是交易紀錄的內容。</p>
+              <%- include('./components/admin/transaction'); -%>
             </div>
             <div id="articles" class="content-section" style="display: none;">
-              <h1 class="fs-2 mb-7 fw-bold">文章管理</h1>
-              <p>這裡是文章管理的內容。</p>
+              <%- include('./components/admin/article'); -%>
             </div>
           </div>
         </div>
